Removed Excessive Bracket
